--- a/jwst_light_curve.ipynb
+++ b/jwst_light_curve.ipynb
@@ -503,7 +503,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Now we x1d int.fits file we will use that for our spectroscopic analysis\n"
+    "## Now we use x1d int.fits file we will use that for our spectroscopic analysis that we got from the pipeline\n"
    ]
   },
   {
